--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3'
-
 services:
   spark-master:
     image: bitnami/spark:3.5.3
@@ -17,16 +16,15 @@ services:
       - ./data:/opt/bitnami/spark/data
     command: >
       bash -c "
-      pip install numpy &&
+      pip install numpy matplotlib scipy &&
       /opt/bitnami/scripts/spark/run.sh
       "
-
-  spark-worker-1:
+  spark-worker-1: &worker
     image: bitnami/spark:3.5.3
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_MEMORY=1500m
       - SPARK_WORKER_CORES=1
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
@@ -37,30 +35,15 @@ services:
       - ./data:/opt/bitnami/spark/data
     command: >
       bash -c "
-      pip install numpy &&
+      pip install numpy matplotlib scipy &&
       /opt/bitnami/scripts/spark/run.sh
       "
-
   spark-worker-2:
-    image: bitnami/spark:3.5.3
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-    volumes:
-      - ./apps:/opt/bitnami/spark/apps
-      - ./data:/opt/bitnami/spark/data
-    command: >
-      bash -c "
-      pip install numpy &&
-      /opt/bitnami/scripts/spark/run.sh
-      "
-
+    <<: *worker
+  spark-worker-3:
+    <<: *worker
+  spark-worker-4:
+    <<: *worker
   jupyter:
     image: bitnami/spark:3.5.3
     user: root
@@ -68,13 +51,13 @@ services:
       - SPARK_MODE=client
       - SPARK_MASTER_URL=spark://spark-master:7077
       - JUPYTER_ENABLE_LAB=yes
-      - PYSPARK_SUBMIT_ARGS=--master spark://spark-master:7077 pyspark-shell
+      - PYSPARK_SUBMIT_ARGS=--master spark://spark-master:7077 --conf spark.executor.cores=1 --conf spark.executor.memory=1500m --conf spark.executor.instances=4 pyspark-shell
     ports:
       - '8888:8888'
     volumes:
       - ./notebooks:/opt/bitnami/spark/notebooks
     command: >
       bash -c "
-      pip install jupyter jupyterlab pyspark==3.5.3 numpy &&
+      pip install jupyter jupyterlab pyspark==3.5.3 numpy matplotlib scipy &&
       jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --NotebookApp.token='' --NotebookApp.password='' --notebook-dir=/opt/bitnami/spark/notebooks
       "
